--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
         </div>
         <div id="footerLoGo">
           <img
-                  src="pngwing.com.png"
+                  src="media/pngwing.com.png"
                   alt="LoGo"
                   height="83px"
                   width="200px"
